--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "customize-cra": "^1.0.0",
     "less": "^4.1.0",
     "less-loader": "^7.3.0",
+    "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
@@ -47,5 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
