--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "screenfull": "^5.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
