--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
+    "dayjs": "^1.10.4",
     "less": "^4.1.0",
     "less-loader": "^7.3.0",
     "nprogress": "^0.2.0",
