--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "dayjs": "^1.10.4",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "less": "^4.1.0",
     "less-loader": "^7.3.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
